Fix elements overflowing past footer, more small tweaks

--- a/app/assets/stylesheets/style-main.css
+++ b/app/assets/stylesheets/style-main.css
@@ -310,18 +310,18 @@ h3 span.divider {
   width: 50%;
   text-align: center;
 }
-.recs-num {
-  font-size: 24pt;
-}
+
 .recs-container {
   text-align: center;
   width: 100%;
   position: absolute;
   bottom: 0;
 }
-.recs-word {
-  height: 10pt;
-  line-height: 10pt;
+.recs-num {
+  font-size: 24pt;
+}
+.recs-container .label {
+  display: block;
 }
 
 
@@ -435,6 +435,9 @@ h3 span.divider {
   overflow-y: auto;
   padding: 0 10px;
   border-top: 1px solid rgba(221,221,221,0.2);
+}
+.pricing .price-list .price-list-inner table {
+  margin-bottom: 10px;
 }
 .pricing .price-list .price-list-inner table th {
   vertical-align: bottom;
